--- a/index_football.html
+++ b/index_football.html
@@ -11,7 +11,7 @@
     <link href="files/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Own CSS -->
-    <link rel="stylesheet" type="text/css" href="files/css/style.css">
+    <link rel="stylesheet" type="text/css" href="files/css/style-football.css">
 
     <!-- Own JS -->
 <!--     <script type="text/javascript" src="files/js/football-api.js"></script> -->
@@ -74,7 +74,7 @@
                 <br>
                 <br>
                 <div id="api-data"></div>
-                <h4>Nationailty</h4>
+                <h4>Nationality</h4>
                 <div id="nationality"></div>
                 <h4>Position</h4>
                 <div id="position"></div>
@@ -93,17 +93,15 @@
             </div>
         </div>
     </section>
-    <!-- Main/Game Section -->
+  <!-- Main/Game Section -->
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="files/js/bootstrap.min.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="files/js/bootstrap.min.js"></script>
 
-    <!-- Own JS -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
-	<script src="files/js/angular-footballdata-api-factory.js"></script>
-    <script type="text/javascript" src="files/js/football-api.js"></script>
+  <!-- Own JS -->
+  <script type="text/javascript" src="files/js/football-api.js"></script>
 
   </body>
 </html>
