Added the logo, modified football-files

--- a/index_football.html
+++ b/index_football.html
@@ -68,18 +68,185 @@
                 </div>
                 <br>
 <!--                 <button type="submit" class="btn btn-default">Start playing!</button> -->
-                <form>
-                	<input type="text" name="Guess the player" placeholder="Guess the player" id="answer">
-                </form>
-                <br>
-                <br>
-                <div id="api-data"></div>
-                <h4>Nationality</h4>
-                <div id="nationality"></div>
-                <h4>Position</h4>
-                <div id="position"></div>
-                <h4>Market Value</h4>
-                <div id="market-value"></div>
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player One</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality1"></div>
+                    <h5>Position</h5>
+                    <div id="position1"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value1"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer1">
+                    </form>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player Two</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality2"></div>
+                    <h5>Position</h5>
+                    <div id="position2"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value2"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer2">
+                    </form>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player Three</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality3"></div>
+                    <h5>Position</h5>
+                    <div id="position3"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value3"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer3">
+                    </form>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player Four</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality4"></div>
+                    <h5>Position</h5>
+                    <div id="position4"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value4"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer4">
+                    </form>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player Five</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality5"></div>
+                    <h5>Position</h5>
+                    <div id="position5"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value5"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer5">
+                    </form>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player Six</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality6"></div>
+                    <h5>Position</h5>
+                    <div id="position6"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value6"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer6">
+                    </form>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player Seven</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality7"></div>
+                    <h5>Position</h5>
+                    <div id="position7"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value7"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer7">
+                    </form>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player Eight</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality8"></div>
+                    <h5>Position</h5>
+                    <div id="position8"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value8"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer8">
+                    </form>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player Nine</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality9"></div>
+                    <h5>Position</h5>
+                    <div id="position9"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value9"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer9">
+                    </form>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4>Player Ten</h4>
+                  </div>
+                  <div class="panel-body">
+                    <h5>Nationality</h5>
+                    <div id="nationality10"></div>
+                    <h5>Position</h5>
+                    <div id="position10"></div>
+                    <h5>Market Value</h5>
+                    <div id="market-value10"></div>
+                    <br>
+                    <form>
+                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer10">
+                    </form>
+                  </div>
+                </div>
 
                 <!-- <form class="form-inline">
                   <div class="form-group">
@@ -89,7 +256,8 @@
                   <br>
                   <button type="submit" class="btn btn-default">Confirm</button>
                 </form> -->
-            </div>
+              </div>
+              <button type="submit" class="btn btn-default" id="calculateScore">Calculate My Score</button>
             </div>
         </div>
     </section>
