--- a/index_football.html
+++ b/index_football.html
@@ -64,7 +64,7 @@
             <div class="col-lg-12 center-block">
                 <h1>Football Player Guessing Game</h1>
                 <div class="col-md-5 center-block">
-                    <h3>Have fun with your friends, or on your own, and test your football knowledge! Can you guess which player we are talking about?</h3>
+                    <h3>Have fun with this quiz for the real football experts! Can you guess which player we are talking about? Remember: we need a first and last name!</h3>
                 </div>
                 <br>
 <!--                 <button type="submit" class="btn btn-default">Start playing!</button> -->
@@ -75,13 +75,16 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality1"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber1"></div>
                     <h5>Position</h5>
                     <div id="position1"></div>
                     <h5>Market Value</h5>
                     <div id="market-value1"></div>
                     <br>
-                    <form>
+                    <form onsubmit="return false">
                       <input type="text" name="Guess the player" placeholder="Guess the player" id="answer1">
+<!--                       <button type="submit" class="btn btn-default" class="saveScore">Save</button> -->
                     </form>
                   </div>
                 </div>
@@ -93,6 +96,8 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality2"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber2"></div>
                     <h5>Position</h5>
                     <div id="position2"></div>
                     <h5>Market Value</h5>
@@ -111,6 +116,8 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality3"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber3"></div>
                     <h5>Position</h5>
                     <div id="position3"></div>
                     <h5>Market Value</h5>
@@ -129,6 +136,8 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality4"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber4"></div>
                     <h5>Position</h5>
                     <div id="position4"></div>
                     <h5>Market Value</h5>
@@ -147,6 +156,8 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality5"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber5"></div>
                     <h5>Position</h5>
                     <div id="position5"></div>
                     <h5>Market Value</h5>
@@ -165,6 +176,8 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality6"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber6"></div>
                     <h5>Position</h5>
                     <div id="position6"></div>
                     <h5>Market Value</h5>
@@ -183,6 +196,8 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality7"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber7"></div>
                     <h5>Position</h5>
                     <div id="position7"></div>
                     <h5>Market Value</h5>
@@ -201,6 +216,8 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality8"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber8"></div>
                     <h5>Position</h5>
                     <div id="position8"></div>
                     <h5>Market Value</h5>
@@ -219,6 +236,8 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality9"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber9"></div>
                     <h5>Position</h5>
                     <div id="position9"></div>
                     <h5>Market Value</h5>
@@ -237,6 +256,8 @@
                   <div class="panel-body">
                     <h5>Nationality</h5>
                     <div id="nationality10"></div>
+                    <h5>Jersey Number</h5>
+                    <div id="jerseyNumber10"></div>
                     <h5>Position</h5>
                     <div id="position10"></div>
                     <h5>Market Value</h5>
@@ -258,6 +279,7 @@
                 </form> -->
               </div>
               <button type="submit" class="btn btn-default" id="calculateScore">Calculate My Score</button>
+              <h3 id="showScore" style="display: none;"></h3>
             </div>
         </div>
     </section>
