--- a/index_football.html
+++ b/index_football.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="files/css/style-football.css">
 
     <!-- Own JS -->
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|News+Cycle|Nunito|Poppins|Quicksand" rel="stylesheet">
 <!--     <script type="text/javascript" src="files/js/football-api.js"></script> -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -45,7 +46,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Movie Guessing Game</a></li>
+                <li><a href="index.html">Movie Guessing Game</a></li>
                 <li><a href="#">World Guessing Game</a></li>
                 <li><a href="#">Music Guessing Game</a></li><!--
                 <li role="separator" class="divider"></li>
@@ -64,209 +65,212 @@
             <div class="col-lg-12 center-block">
                 <h1>Football Player Guessing Game</h1>
                 <div class="col-md-5 center-block">
-                    <h3>Have fun with this quiz for the real football experts! Can you guess which player we are talking about? Remember: we need a first and last name!</h3>
+                    <h3 id="intro-text">Have fun with this quiz for the real football experts! Can you guess which player we are talking about? Remember: we need a first and last name!</h3>
                 </div>
                 <br>
-<!--                 <button type="submit" class="btn btn-default">Start playing!</button> -->
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player One</h4>
+                <button id="startButton" type="submit" class="btn btn-default">Start playing!</button>
+                <div id="gaming">
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player One</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality1"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber1"></div>
+                      <h5>Position</h5>
+                      <div id="position1"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value1"></div>
+                      <br>
+                      <form onsubmit="return false">
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer1">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality1"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber1"></div>
-                    <h5>Position</h5>
-                    <div id="position1"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value1"></div>
-                    <br>
-                    <form onsubmit="return false">
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer1">
-<!--                       <button type="submit" class="btn btn-default" class="saveScore">Save</button> -->
-                    </form>
-                  </div>
-                </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player Two</h4>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player Two</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality2"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber2"></div>
+                      <h5>Position</h5>
+                      <div id="position2"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value2"></div>
+                      <br>
+                      <form>
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer2">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality2"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber2"></div>
-                    <h5>Position</h5>
-                    <div id="position2"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value2"></div>
-                    <br>
-                    <form>
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer2">
-                    </form>
-                  </div>
-                </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player Three</h4>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player Three</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality3"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber3"></div>
+                      <h5>Position</h5>
+                      <div id="position3"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value3"></div>
+                      <br>
+                      <form>
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer3">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality3"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber3"></div>
-                    <h5>Position</h5>
-                    <div id="position3"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value3"></div>
-                    <br>
-                    <form>
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer3">
-                    </form>
-                  </div>
-                </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player Four</h4>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player Four</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality4"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber4"></div>
+                      <h5>Position</h5>
+                      <div id="position4"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value4"></div>
+                      <br>
+                      <form>
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer4">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality4"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber4"></div>
-                    <h5>Position</h5>
-                    <div id="position4"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value4"></div>
-                    <br>
-                    <form>
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer4">
-                    </form>
-                  </div>
-                </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player Five</h4>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player Five</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality5"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber5"></div>
+                      <h5>Position</h5>
+                      <div id="position5"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value5"></div>
+                      <br>
+                      <form>
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer5">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality5"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber5"></div>
-                    <h5>Position</h5>
-                    <div id="position5"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value5"></div>
-                    <br>
-                    <form>
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer5">
-                    </form>
-                  </div>
-                </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player Six</h4>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player Six</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality6"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber6"></div>
+                      <h5>Position</h5>
+                      <div id="position6"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value6"></div>
+                      <br>
+                      <form>
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer6">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality6"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber6"></div>
-                    <h5>Position</h5>
-                    <div id="position6"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value6"></div>
-                    <br>
-                    <form>
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer6">
-                    </form>
-                  </div>
-                </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player Seven</h4>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player Seven</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality7"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber7"></div>
+                      <h5>Position</h5>
+                      <div id="position7"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value7"></div>
+                      <br>
+                      <form>
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer7">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality7"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber7"></div>
-                    <h5>Position</h5>
-                    <div id="position7"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value7"></div>
-                    <br>
-                    <form>
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer7">
-                    </form>
-                  </div>
-                </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player Eight</h4>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player Eight</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality8"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber8"></div>
+                      <h5>Position</h5>
+                      <div id="position8"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value8"></div>
+                      <br>
+                      <form>
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer8">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality8"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber8"></div>
-                    <h5>Position</h5>
-                    <div id="position8"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value8"></div>
-                    <br>
-                    <form>
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer8">
-                    </form>
-                  </div>
-                </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player Nine</h4>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player Nine</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality9"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber9"></div>
+                      <h5>Position</h5>
+                      <div id="position9"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value9"></div>
+                      <br>
+                      <form>
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer9">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality9"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber9"></div>
-                    <h5>Position</h5>
-                    <div id="position9"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value9"></div>
-                    <br>
-                    <form>
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer9">
-                    </form>
-                  </div>
-                </div>
 
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Player Ten</h4>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4>Player Ten</h4>
+                    </div>
+                    <div class="panel-body">
+                      <h5>Nationality</h5>
+                      <div id="nationality10"></div>
+                      <h5>Jersey Number</h5>
+                      <div id="jerseyNumber10"></div>
+                      <h5>Position</h5>
+                      <div id="position10"></div>
+                      <h5>Market Value</h5>
+                      <div id="market-value10"></div>
+                      <br>
+                      <form>
+                        <input type="text" name="Guess the player" placeholder="Guess the player" id="answer10">
+                      </form>
+                    </div>
                   </div>
-                  <div class="panel-body">
-                    <h5>Nationality</h5>
-                    <div id="nationality10"></div>
-                    <h5>Jersey Number</h5>
-                    <div id="jerseyNumber10"></div>
-                    <h5>Position</h5>
-                    <div id="position10"></div>
-                    <h5>Market Value</h5>
-                    <div id="market-value10"></div>
-                    <br>
-                    <form>
-                      <input type="text" name="Guess the player" placeholder="Guess the player" id="answer10">
-                    </form>
-                  </div>
+                  <button type="submit" class="btn btn-default" id="calculateScore">Calculate My Score</button>
+                  <h3 id="showScore" style="display: none;"></h3>                  
                 </div>
 
                 <!-- <form class="form-inline">
@@ -278,8 +282,6 @@
                   <button type="submit" class="btn btn-default">Confirm</button>
                 </form> -->
               </div>
-              <button type="submit" class="btn btn-default" id="calculateScore">Calculate My Score</button>
-              <h3 id="showScore" style="display: none;"></h3>
             </div>
         </div>
     </section>
