--- a/index_football.html
+++ b/index_football.html
@@ -65,14 +65,15 @@
             <div class="col-lg-12 center-block">
                 <h1>Football Player Guessing Game</h1>
                 <div class="col-md-5 center-block">
-                    <h3 id="intro-text">Have fun with this quiz for the real football experts! Can you guess which player we are talking about? Remember: we need a first and last name!</h3>
+                    <h3 id="intro-text">Have fun with this quiz for the real football experts! Can you guess which player we are talking about?</h3> 
+                    <h3>Attention: we need a first and last name!</h3>
                 </div>
                 <br>
                 <button id="startButton" type="submit" class="btn btn-default">Start playing!</button>
                 <div id="gaming">
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player One</h4>
+                      <h4>Player #1</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
@@ -92,7 +93,7 @@
 
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player Two</h4>
+                      <h4>Player #2</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
@@ -112,7 +113,7 @@
 
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player Three</h4>
+                      <h4>Player #3</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
@@ -132,7 +133,7 @@
 
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player Four</h4>
+                      <h4>Player #4</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
@@ -152,7 +153,7 @@
 
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player Five</h4>
+                      <h4>Player #5</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
@@ -172,7 +173,7 @@
 
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player Six</h4>
+                      <h4>Player #6</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
@@ -192,7 +193,7 @@
 
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player Seven</h4>
+                      <h4>Player #7</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
@@ -212,7 +213,7 @@
 
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player Eight</h4>
+                      <h4>Player #8</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
@@ -232,7 +233,7 @@
 
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player Nine</h4>
+                      <h4>Player #9</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
@@ -252,7 +253,7 @@
 
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4>Player Ten</h4>
+                      <h4>Player #10</h4>
                     </div>
                     <div class="panel-body">
                       <h5>Nationality</h5>
