connected the files and added the logo

--- a/index_football.html
+++ b/index_football.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="Logo.png" id="logo"></a>
+          <a class="navbar-brand" href="index_football.html"><img src="Logo.png" id="logo"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,9 +46,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="index.html">Movie Guessing Game</a></li>
+                <li><a href="movies.html">Movie Guessing Game</a></li>
                 <li><a href="#">World Guessing Game</a></li>
-                <li><a href="#">Music Guessing Game</a></li><!--
+                <li><a href="music.html">Music Guessing Game</a></li><!--
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Info</a></li> -->
               </ul>
@@ -72,10 +72,10 @@
                 <button id="startButton" type="submit" class="btn btn-default">Start playing!</button>
                 <div id="gaming">
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player1">
                       <h4>Player #1</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent1">
                       <h5>Nationality</h5>
                       <div id="nationality1"></div>
                       <h5>Jersey Number</h5>
@@ -92,10 +92,10 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player2">
                       <h4>Player #2</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent2">
                       <h5>Nationality</h5>
                       <div id="nationality2"></div>
                       <h5>Jersey Number</h5>
@@ -112,10 +112,10 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player3">
                       <h4>Player #3</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent3">
                       <h5>Nationality</h5>
                       <div id="nationality3"></div>
                       <h5>Jersey Number</h5>
@@ -132,10 +132,10 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player4">
                       <h4>Player #4</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent4">
                       <h5>Nationality</h5>
                       <div id="nationality4"></div>
                       <h5>Jersey Number</h5>
@@ -152,10 +152,10 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player5">
                       <h4>Player #5</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent5">
                       <h5>Nationality</h5>
                       <div id="nationality5"></div>
                       <h5>Jersey Number</h5>
@@ -172,10 +172,10 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player6">
                       <h4>Player #6</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent6">
                       <h5>Nationality</h5>
                       <div id="nationality6"></div>
                       <h5>Jersey Number</h5>
@@ -192,10 +192,10 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player7">
                       <h4>Player #7</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent7">
                       <h5>Nationality</h5>
                       <div id="nationality7"></div>
                       <h5>Jersey Number</h5>
@@ -212,10 +212,10 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player8">
                       <h4>Player #8</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent8">
                       <h5>Nationality</h5>
                       <div id="nationality8"></div>
                       <h5>Jersey Number</h5>
@@ -232,10 +232,10 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player9">
                       <h4>Player #9</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent9">
                       <h5>Nationality</h5>
                       <div id="nationality9"></div>
                       <h5>Jersey Number</h5>
@@ -252,10 +252,10 @@
                   </div>
 
                   <div class="panel panel-default">
-                    <div class="panel-heading">
+                    <div class="panel-heading" id="player10">
                       <h4>Player #10</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" id="playerContent10">
                       <h5>Nationality</h5>
                       <div id="nationality10"></div>
                       <h5>Jersey Number</h5>
