--- a/music.html
+++ b/music.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          
+          <a class="navbar-brand" href="music.html"><img src="Logo.png" id="logo"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,9 +45,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Movie Guessing Game</a></li>
+                <li><a href="movies.html">Movie Guessing Game</a></li>
                 <li><a href="#">World Guessing Game</a></li>
-                <li><a href="#">Music Guessing Game</a></li><!--
+                <li><a href="index_football.html">Football Guessing Game</a></li><!--
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Info</a></li> -->
               </ul>
