changed the location of world.css and world.js and linked everything together

--- a/music.html
+++ b/music.html
@@ -46,7 +46,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="movies.html">Movie Guessing Game</a></li>
-                <li><a href="#">World Guessing Game</a></li>
+                <li><a href="world.html">World Guessing Game</a></li>
                 <li><a href="index_football.html">Football Guessing Game</a></li><!--
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Info</a></li> -->
