--- a/world.html
+++ b/world.html
@@ -48,8 +48,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="movies.html">Movie Guessing Game</a></li>              
                 <li><a href="index_football.html">Football Guessing Game</a></li>
+                <li><a href="world.html">World Guessing Game</a></li>
                 <li><a href="music.html">Music Guessing Game</a></li><!--
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Info</a></li> -->
@@ -73,6 +73,7 @@
 <!--                 <button type="submit" class="btn btn-default">Start playing!</button> -->
                 <input id="input" type="text" name="Guess the movie" placeholder="Guess the country">
                 <button id="generate_new" class="btn btn-default" type="button">I am lucky!</button>
+                <button id="refresh" class="btn btn-default" type="button">Next...</button>
 
                <div id="photo_container" class="col-lg-12 center-block">
                  <img class="images" src="">
