--- a/world.html
+++ b/world.html
@@ -72,8 +72,12 @@
                 <br>
 <!--                 <button type="submit" class="btn btn-default">Start playing!</button> -->
                 <input id="input" type="text" name="Guess the movie" placeholder="Guess the country">
-                <button id="generate_new" class="btn btn-default" type="button">I am lucky!</button>
-                <button id="refresh" class="btn btn-default" type="button">Next...</button>
+                <div class="row">
+                  <div class="col-lg-12 center-block">
+                    <button id="generate_new" class="btn btn-primary" type="button">I am lucky!</button>
+                    <button id="refresh" class="btn btn-outline-info" type="button">Next...</button>
+                  </div> <!-- buttons !-->
+                </div>   <!-- row !-->
 
                <div id="photo_container" class="col-lg-12 center-block">
                  <img class="images" src="">
