--- a/music.html
+++ b/music.html
@@ -66,7 +66,7 @@
                 </div>
                 <br>
 <!--                 <button type="submit" class="btn btn-default">Start playing!</button> -->
-                <button id="myBtn" onclick="randomTrack(this.value)">Start the game!</button>
+                <button class="btn btn-default" id="myBtn" onclick="randomTrack(this.value)">Start the game!</button>
                 <br>
                 <br>
                 <form>
@@ -76,7 +76,7 @@
                 
                 <br>
                 
-                <button id="check" onclick="check(this.value)">check your answer</button>
+                <button class="btn btn-default" id="check" onclick="check(this.value)">check your answer</button>
                 <h4>Summary</h4>
                 <div id="Summary"></div>
                 <div id="result"></div>
