changes to music looks

--- a/music.html
+++ b/music.html
@@ -13,6 +13,7 @@
     <!-- Own CSS -->
     <link rel="stylesheet" type="text/css" href="files/css/style-music.css">
 
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|News+Cycle|Nunito|Poppins|Quicksand" rel="stylesheet">
     <!-- Own JS -->
 <!--     <script type="text/javascript" src="files/js/football-api.js"></script> -->
 
