movies.html last

--- a/movies.html
+++ b/movies.html
@@ -49,7 +49,8 @@
               <ul class="dropdown-menu">
                 <li><a href="index_football.html">Football Guessing Game</a></li>
                 <li><a href="world.html">World Guessing Game</a></li>
-                <li><a href="music.html">Music Guessing Game</a></li><!--
+                <li><a href="music.html">Music Guessing Game</a></li>
+                <!--
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Info</a></li> -->
               </ul>
