--- a/music.html
+++ b/music.html
@@ -13,7 +13,6 @@
     <!-- Own CSS -->
     <link rel="stylesheet" type="text/css" href="files/css/style-music.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|News+Cycle|Nunito|Poppins|Quicksand" rel="stylesheet">
     <!-- Own JS -->
 <!--     <script type="text/javascript" src="files/js/football-api.js"></script> -->
 
@@ -36,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="music.html"><img src="Logo.png" id="logo"></a>
+          <a class=navbar-brand" href="movies.html"><img src="Logo.png" id="logo"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,12 +45,14 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="movies.html">Movie Guessing Game</a></li>
+                <li><a href="movie.html">Movie Guessing Game</a></li>
                 <li><a href="world.html">World Guessing Game</a></li>
-                <li><a href="index_football.html">Football Guessing Game</a></li><!--
+                <li><a href="#">Music Guessing Game</a></li><!--
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Info</a></li> -->
               </ul>
+            </li>
+            <li><a href="#">About</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -67,7 +68,7 @@
                 </div>
                 <br>
 <!--                 <button type="submit" class="btn btn-default">Start playing!</button> -->
-                <button class="btn btn-default" id="myBtn" onclick="randomTrack(this.value)">Start the game!</button>
+                <button class="waves-effect waves-light btn" id="myBtn" onclick="randomTrack(this.value)">Start the game!</button>
                 <br>
                 <br>
                 <form>
@@ -77,7 +78,7 @@
                 
                 <br>
                 
-                <button class="btn btn-default" id="check" onclick="check(this.value)">check your answer</button>
+                <button class="waves-effect waves-light btn" id="check" onclick="check(this.value)">check your answer</button>
                 <h4>Summary</h4>
                 <div id="Summary"></div>
                 <div id="result"></div>
